--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,3 +1,13 @@
+body.theme-light {
+  --ion-background-color: #ffffff;
+  --ion-text-color: #111827;
+  --ion-item-background: #ffffff;
+  --ion-card-background: #ffffff;
+  --ion-toolbar-background: #f8fafc;
+  --ion-toolbar-color: #111827;
+  --ion-color-primary: #3880ff;
+}
+
 body.theme-dark {
   --ion-background-color: #121212;
   --ion-text-color: #ffffff;
