--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,14 +7,12 @@
       </ion-button>
     </ion-buttons>
 
-    <ion-title>
-      Themes Demo
+    <ion-title class="ion-text-center" >
+      HOME
     </ion-title>
 
     <ion-buttons slot="end">
-      <ion-button (click)="presentThemeActionSheet()">
-        <ion-icon slot="icon-only" name="color-palette"></ion-icon>
-      </ion-button>
+      <app-theme-button></app-theme-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
