--- a/src/app/intro/intro.page.html
+++ b/src/app/intro/intro.page.html
@@ -1,16 +1,27 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Introducción</ion-title>
+    <ion-title class="ion-text-center"> Introducción</ion-title>
+    <ion-buttons slot="end">
+      <app-theme-button></app-theme-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding ion-text-center">
   <div class="container-center">
-    <ion-title size="large">Bienvenido</ion-title>
-    <p>Esta es la página de introducción de la aplicación.</p>
-    
-    <ion-button (click)="goToHome()" expand="block" shape="round" color="primary">
-      Volver al Home
-    </ion-button>
+    <swiper-container pagination="true" loop="false" slides-per-view="1">
+      <swiper-slide *ngFor="let slide of slides; let i = index">
+        <div class="slide-content card">
+          <h2>{{slide.title}}</h2>
+          <h3 class="subtitle">{{slide.description}}</h3>
+          <img [src]="slide.image" [alt]="slide.title" />
+        </div>
+      </swiper-slide>
+    </swiper-container>
+
+    <div class="actions ion-margin-top">
+      <ion-button expand="block" color="primary" (click)="startApp()">Ir al Home</ion-button>
+      <ion-button expand="block" color="medium" fill="clear" (click)="resetIntroSeen()">Borrar registro de Intro (ver de nuevo)</ion-button>
+    </div>
   </div>
 </ion-content>
