slides de intro y css utilities

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,7 +19,8 @@
 
 <ion-content [fullscreen]="true">
   <swiper-container 
-    pagination="true" 
+    pagination="true"
+    pagination-clickable="true"
     loop="true" 
     slides-per-view="1"
   >
@@ -31,3 +32,4 @@
       </div>
     </swiper-slide>
   </swiper-container>
+
