Actividades del video 11

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,6 +5,7 @@
         <ion-icon slot="start" name="arrow-back-outline"></ion-icon>
         Intro
       </ion-button>
+      <ion-menu-button menu = "main-menu"></ion-menu-button>
     </ion-buttons>
 
     <ion-title class="ion-text-center" >
