--- a/src/app/intro/intro.page.html
+++ b/src/app/intro/intro.page.html
@@ -7,22 +7,25 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding ion-text-center">
+<ion-content class="ion-padding ion-text-center intro-page" [class.theme-dark]="slideTheme === 'dark'"
+  [class.theme-rosa]="slideTheme === 'rosa'" [class.theme-amarillo]="slideTheme === 'amarillo'">
+
   <div class="container-center">
-    <swiper-container pagination="true" loop="true" slides-per-view="1">
+    <swiper-container pagination="true" slides-per-view="1">
       <swiper-slide *ngFor="let slide of slides; let i = index">
-        <div class="slide-content card">
+        <div class="slide-content card" [class.theme-dark]="slideTheme === 'dark'"
+          [class.theme-rosa]="slideTheme === 'rosa'" [class.theme-amarillo]="slideTheme === 'amarillo'">
           <h2>{{slide.title}}</h2>
           <h3 class="subtitle">{{slide.description}}</h3>
-          <img [src]="slide.image" [alt]="slide.title" />
+          <img [src]="slide.image" [alt]="slide.title" ng-skip-optimization />
         </div>
       </swiper-slide>
     </swiper-container>
 
     <div class="actions ion-margin-top">
       <ion-button expand="block" color="primary" (click)="startApp()">Ir al Home</ion-button>
-      <ion-button expand="block" color="medium" fill="clear" (click)="resetIntroSeen()">Borrar registro de Intro (ver de nuevo)</ion-button>
+      <ion-button expand="block" color="medium" fill="clear" (click)="resetIntroSeen()">Borrar registro de Intro (ver de
+        nuevo)</ion-button>
     </div>
   </div>
 </ion-content>
-
