--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -1,20 +1,29 @@
-<ion-split-pane contentId = "main-content">
-  <ion-menu contentId = "main-content" menuId = "main-menu">
-    <ion-header>
-      <ion-toolbar>
-        <ion-title> Menú </ion-title>
-      </ion-toolbar>
-    </ion-header>
+<ion-menu contentId="main-content">
+  <ion-header>
+    <ion-toolbar color="success">
+      <ion-title>Menú Faketify</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-menu-toggle auto-hide="false">
+        <ion-item button routerLink="/menu/home" routerDirection="root">
+          <ion-icon slot="start" name="home-outline"></ion-icon>
+          <ion-label>Home</ion-label>
+        </ion-item>
+        <ion-item button routerLink="/intro" routerDirection="root">
+          <ion-icon slot="start" name="information-circle-outline"></ion-icon>
+          <ion-label>Intro</ion-label>
+        </ion-item>
+        <ion-item button (click)="logout()" routerDirection="root">
+          <ion-icon slot="start" name="log-out-outline"></ion-icon>
+          <ion-label>Cerrar Sesión</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+    </ion-list>
+  </ion-content>
+</ion-menu>
 
-    <ion-content>
-      <ion-list>
-        <ion-item> Opción 1 </ion-item>
-      </ion-list>
-    </ion-content>
-  </ion-menu>
-
-  <ion-router-outlet id = "main-content"></ion-router-outlet>
-</ion-split-pane>
-
-
-  
+<div class="ion-page" id="main-content">
+  <ion-router-outlet></ion-router-outlet>
+</div>
