--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -1,7 +1,10 @@
-<ion-menu contentId="main-content">
+<ion-menu contentId = "main-content">
   <ion-header>
-    <ion-toolbar color="success">
-      <ion-title>Menú Faketify</ion-title>
+    <ion-toolbar color = "success">
+      <ion-menu-toggle>
+        <ion-icon name = "close-circle-outline" size = "large"></ion-icon>
+      </ion-menu-toggle>
+      <ion-title>Menú</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content>
@@ -12,18 +15,18 @@
           <ion-label>Home</ion-label>
         </ion-item>
         <ion-item button routerLink="/intro" routerDirection="root">
-          <ion-icon slot="start" name="information-circle-outline"></ion-icon>
-          <ion-label>Intro</ion-label>
+          <ion-icon slot="start" name = "information-circle-outline"></ion-icon>
+          <ion-label> Intro </ion-label>
         </ion-item>
-        <ion-item button (click)="logout()" routerDirection="root">
-          <ion-icon slot="start" name="log-out-outline"></ion-icon>
-          <ion-label>Cerrar Sesión</ion-label>
+        <ion-item button (click) = "logout()" routerDirection = "root">
+          <ion-icon slot = "start" name = "log-out-outline"></ion-icon>
+          <ion-label> Cerrar Sesión </ion-label>
         </ion-item>
       </ion-menu-toggle>
     </ion-list>
   </ion-content>
 </ion-menu>
 
-<div class="ion-page" id="main-content">
+<div class = "ion-page" id = "main-content">
   <ion-router-outlet></ion-router-outlet>
 </div>
