--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,11 +3,7 @@
         <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
-
-        <ion-title class="ion-text-center">
-            HOME
-        </ion-title>
-
+        <ion-title class="ion-text-center"> Home </ion-title>
         <ion-buttons slot="end">
             <app-theme-button></app-theme-button>
         </ion-buttons>
@@ -15,13 +11,18 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-    <swiper-container pagination="true" pagination-clickable="true" slides-per-view="1">
-        <swiper-slide *ngFor="let genre of genres">
-            <div class="slide-content">
-                <h2>{{genre.title}}</h2>
-                <img [src]="genre.image" [alt]="genre.title" ng-skip-optimization />
-                <p>{{genre.description}}</p>
-            </div>
-        </swiper-slide>
+    <swiper-container 
+    pagination = "true"
+    loop = "true"
+    pagination-clickable = "true"
+    slides-per-view = "1"
+    >
+    <swiper-slide *ngFor="let genre of genres">
+        <div class="slide-content">
+            <h2>{{genre.title}}</h2>
+            <img [src]="genre.image" [alt]="genre.title" ng-skip-optimization />
+            <p>{{genre.description}}</p>
+        </div>
+    </swiper-slide>
     </swiper-container>
 </ion-content>
