--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -9,10 +9,14 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <ion-menu-toggle auto-hide="false">
+      <ion-menu-toggle>
         <ion-item button routerLink="/menu/home" routerDirection="root">
           <ion-icon slot="start" name="home-outline"></ion-icon>
           <ion-label>Home</ion-label>
+        </ion-item>
+        <ion-item button (click)="navigate('/menu/artists')">
+          <ion-icon slot="start" name="person-circle-outline"></ion-icon>
+          <ion-label>Artistas</ion-label>
         </ion-item>
         <ion-item button routerLink="/intro" routerDirection="root">
           <ion-icon slot="start" name = "information-circle-outline"></ion-icon>
