video 15 y parte del 16

--- a/src/app/albums/albums.page.html
+++ b/src/app/albums/albums.page.html
@@ -1,27 +1,26 @@
-<ion-header [translucent]="true">
-    <ion-toolbar>
-        <ion-buttons slot="start">
-            <ion-menu-button></ion-menu-button>
-        </ion-buttons>
-        <ion-title class="ion-text-center"> Álbumes </ion-title>
-        <ion-buttons slot="end">
-            <app-theme-button></app-theme-button>
-        </ion-buttons>
-    </ion-toolbar>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Álbumes</ion-title>
+    <ion-buttons slot="end">
+      <app-theme-button></app-theme-button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <swiper-container 
-    pagination = "true"
-    loop = "true"
-    pagination-clickable = "true"
-    slides-per-view = "3"
-    >
-    <swiper-slide *ngFor="let album of albums" (click)="showSongs(album.id)">
-        <div class="slide-content">
-            <img [src]="album.image" ng-skip-optimization/>
-            <p>{{album.name}}</p>
-        </div>
-    </swiper-slide>
-  </swiper-container>
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let album of albums" (click)="showSongs(album)">
+      <ion-thumbnail slot="start">
+        <img [src]="album.image || album.cover || album.cover_url || 'assets/placeholder-album.png'" />
+      </ion-thumbnail>
+
+      <ion-label>
+        <h2>{{ album.title || album.name }}</h2>
+        <p>{{ album.artist || album.artist_name || album.artistName || 'Artista desconocido' }}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
