--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -18,7 +18,7 @@
           <ion-icon slot="start" name="person-circle-outline"></ion-icon>
           <ion-label>Artistas</ion-label>
         </ion-item>
-        <ion-item button routerLink="/albums" routerDirection="root">
+        <ion-item button routerLink="/menu/albums" routerDirection="root">
           <ion-icon slot="start" name="albums-outline"></ion-icon>
           <ion-label>Álbumes</ion-label>
         </ion-item>
